--- a/00-HTML-CSS-basics/index.html
+++ b/00-HTML-CSS-basics/index.html
@@ -12,26 +12,22 @@
    <title>Mi primera pagina web</title>
 </head>
     <body>
-    <center> 
-            <header id="principal" class="header"> 
-             Cabecera 
-            </header>
-            </center>
-            <aside id= "sidebar" class="sidebar"> Aside
-                <nav class="navigation">
-                    Navegador
-                </nav>
-            </aside>
-        <section class="content"> 
-        <div id="seccion">   Sección </div>> 
-        <div id="header"> header </div>
-        <article> Articulo </article>
-           
-        </section>
-        <center> 
-            <footer class="footer">
-            Pie de pagina
-            </footer>
-            </center>
+  <header id="principal" class="header"> 
+         Cabecera 
+  </header>
+  <div>
+      <nav class="navigation"> 
+      </nav>
+      <section  class="content"> 
+        <header>  </header>
+        <article>  </article>
+        <footer class="footer">  </footer>
+      </section>
+      <aside id= "sidebar" class="sidebar">
+          
+      </aside>
+  </div> 
+  <footer>
+   </footer>
     </body>
 </html>
