--- a/00-HTML-CSS-basics/css/index.html
+++ b/00-HTML-CSS-basics/css/index.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
 <head>
-   <meta charset="UTF-8" />
-   <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title> HTML con CSS </title>
-    <meta name="description" content="Estructura basica">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="css/reset.css">
-    <link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="css/estilos.css">
-    <link href='https://fonts.googleapis.com/css?family=PT+Sans+Caption' rel='stylesheet' type='text/css'>
-   <title>Mi primera pagina web</title>
+ <meta charset="UTF-8" />
+ <meta http-equiv="x-ua-compatible" content="ie=edge">
+ <title> HTML con CSS </title>
+ <meta name="description" content="Estructura basica">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+ <link rel="stylesheet" type="text/css" href="css/reset.css">
+ <link rel="stylesheet" type="text/css" href="css/normalize.css">
+ <link rel="stylesheet" type="text/css" href="css/estilos.css">
+ <link href='https://fonts.googleapis.com/css?family=PT+Sans+Caption' rel='stylesheet' type='text/css'>
+ <title>Mi primera pagina web</title>
 </head>
-    <body>
+<body>
   <header id="principal" class="header"> 
-         Cabecera 
-  </header>
-  <div>
-      <nav class="navigation"> 
-      </nav>
-      <section  class="content"> 
-        <header>  </header>
-        <article>  </article>
-        <footer class="footer">  </footer>
-      </section>
-      <aside id= "sidebar" class="sidebar">
-          
-      </aside>
-  </div> 
-  <footer>
-   </footer>
-    </body>
+   Cabecera 
+</header>
+<div>
+  <nav class="navigation"> nav
+  </nav>
+  <section  class="content"> 
+  <header class="cab"> header  </header> 
+    <article class="art"> article </article> 
+    <footer class="footer"> footer </footer>
+</section>
+<aside id= "sidebar" class="sidebar">
+  aside
+</aside>
+</div> 
+<br class="clear">
+<footer> footer
+</footer>
+</body>
 </html>
